load("@rules_java//java:defs.bzl", "java_library")
load("@com_google_j2cl//build_defs:rules.bzl", "j2cl_application", "j2cl_library")


java_library(
    name = "core",
    srcs = glob(
        [
           "java/src/**/*.java",
        ],
    ),
    visibility = ["//demo:__pkg__"],
    deps = [
	    "@elemental2-dom//jar",
	    "@jsinterop-annotations//jar",
    ],
)

j2cl_library(
    name = "client-core-j2cl",
    srcs = glob(
        [
            "java/src/**/*.java",
        ],
    ),
    visibility = ["//demo:__pkg__"],
    deps = [
	    "@com_google_elemental2//:elemental2-dom-j2cl",
    ],
)
