load("@rules_java//java:defs.bzl", "java_library")
load("@com_google_j2cl//build_defs:rules.bzl", "j2cl_application", "j2cl_library")


java_plugin(
    name = "j2cl-processors_plugin",
    processor_class = "org.treblereel.j2cl.processors.GWT3Processor",
    deps = ["@gwt3-processors//jar"],
)

java_library(
    name = "demo",
    srcs = glob(
        [
           "java/src/**/*.java",
        ],
    ),
    deps = [
	    "//core:core",
	    "@elemental2-dom//jar",
	    "@jsinterop-annotations//jar",
	    "@jsinterop-base//jar",
	    "@gwt3-processors-annotations",
    ],
)

j2cl_library(
    name = "demo-lib-j2cl",
    srcs = glob(
        [
            "java/src/**/*.java",
            "java/src/**/*.js",
        ],
    ),
    plugins = [
        ":j2cl-processors_plugin"
    ],
    deps = [
        "//core:core-j2cl",
	    "@com_google_elemental2//:elemental2-dom-j2cl",
	    "@gwt3-processors-annotations-j2cl",
        "@com_google_j2cl//:jsinterop-annotations-j2cl",
    ],
)

j2cl_application(
    name = "demo-app",
    entry_points = ["demo.Starter"],
    deps = [":demo-lib-j2cl"],
)

